--- a/login.html
+++ b/login.html
@@ -1,89 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Login - Win Win Blog</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Login – Win Win</title>
+
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #000000 0%, #1a0a0a 100%);
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: radial-gradient(circle at top, #1a0a0a, #000);
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #ffffff;
+      color: #fff;
     }
 
-    .container {
+    .card {
       width: 100%;
       max-width: 420px;
-      padding: 20px;
-    }
-
-    .login-card {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 16px;
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.12);
+      backdrop-filter: blur(14px);
+      border-radius: 18px;
       padding: 40px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 20px 60px rgba(0,0,0,0.6);
     }
 
-    .logo {
+    h1 {
       text-align: center;
-      margin-bottom: 32px;
-    }
-
-    .logo h1 {
       font-size: 32px;
-      font-weight: bold;
-      color: #ffffff;
+      margin-bottom: 6px;
     }
 
-    .logo .dot {
-      color: #e11d2e;
-    }
+    h1 span { color: #e11d2e; }
 
-    .logo p {
-      color: #999;
-      margin-top: 8px;
+    p.subtitle {
+      text-align: center;
       font-size: 14px;
-    }
-
-    .form-group {
-      margin-bottom: 20px;
+      color: #aaa;
+      margin-bottom: 30px;
     }
 
     label {
-      display: block;
-      margin-bottom: 8px;
       font-size: 14px;
-      font-weight: 500;
-      color: #cccccc;
+      color: #ccc;
+      display: block;
+      margin-bottom: 6px;
     }
 
     input {
       width: 100%;
-      padding: 12px 16px;
-      background: rgba(255, 255, 255, 0.08);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 12px 14px;
       border-radius: 8px;
-      color: #ffffff;
-      font-size: 16px;
-      transition: all 0.3s;
+      border: 1px solid rgba(255,255,255,0.15);
+      background: rgba(255,255,255,0.08);
+      color: #fff;
+      margin-bottom: 18px;
+      font-size: 15px;
     }
 
     input:focus {
       outline: none;
       border-color: #e11d2e;
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255,255,255,0.12);
     }
 
     button {
@@ -92,124 +74,112 @@
       background: #e11d2e;
       border: none;
       border-radius: 8px;
-      color: #ffffff;
       font-size: 16px;
       font-weight: 600;
+      color: #fff;
       cursor: pointer;
-      transition: all 0.3s;
-      margin-top: 8px;
     }
 
-    button:hover {
-      background: #c11828;
-      box-shadow: 0 4px 20px rgba(225, 29, 46, 0.4);
-    }
+    button:hover { background: #c11828; }
 
     button:disabled {
-      opacity: 0.5;
+      opacity: 0.6;
       cursor: not-allowed;
     }
 
-    .error-message {
-      background: rgba(225, 29, 46, 0.1);
-      border: 1px solid rgba(225, 29, 46, 0.3);
-      border-radius: 8px;
+    .error {
+      background: rgba(225,29,46,0.15);
+      border: 1px solid rgba(225,29,46,0.4);
       padding: 12px;
-      margin-bottom: 20px;
-      color: #ff6b6b;
+      border-radius: 8px;
       font-size: 14px;
+      margin-bottom: 18px;
       display: none;
     }
 
-    .error-message.show {
-      display: block;
-    }
+    .error.show { display: block; }
 
-    .back-link {
-      text-align: center;
+    .back {
       margin-top: 24px;
-    }
-
-    .back-link a {
-      color: #999;
-      text-decoration: none;
+      text-align: center;
       font-size: 14px;
-      transition: color 0.3s;
     }
 
-    .back-link a:hover {
-      color: #e11d2e;
+    .back a {
+      color: #aaa;
+      text-decoration: none;
     }
+
+    .back a:hover { color: #e11d2e; }
   </style>
 </head>
+
 <body>
-  <div class="container">
-    <div class="login-card">
-      <div class="logo">
-        <h1>Win Win<span class="dot">.</span></h1>
-        <p>Blog Admin Login</p>
-      </div>
 
-      <div id="errorMessage" class="error-message"></div>
+  <div class="card">
+    <h1>Win Win<span>.</span></h1>
+    <p class="subtitle">Blog Admin Login</p>
 
-      <form id="loginForm">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required autocomplete="email">
-        </div>
+    <div id="error" class="error"></div>
 
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required autocomplete="current-password">
-        </div>
+    <form id="loginForm">
+      <label>Email</label>
+      <input type="email" id="email" required autocomplete="email" />
 
-        <button type="submit" id="loginButton">Sign In</button>
-      </form>
+      <label>Password</label>
+      <input type="password" id="password" required autocomplete="current-password" />
 
-      <div class="back-link">
-        <a href="/insights.html">Back to Blog</a>
-      </div>
+      <button id="loginBtn" type="submit">Sign In</button>
+    </form>
+
+    <div class="back">
+      <a href="/insights.html">← Back to Blog</a>
     </div>
   </div>
 
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="/js/supabaseClient.js"></script>
+
+  <!-- Supabase Client -->
   <script>
-    const supabase = window.supabase;
+    const SUPABASE_URL = "https://nybgvfskctuljqlrsmsq.supabase.co";
+    const SUPABASE_ANON_KEY = "sb_publishable_zbJZxJVPQmkJYK3lK9LrBg_BuJTg1A";
 
-    const loginForm = document.getElementById('loginForm');
-    const loginButton = document.getElementById('loginButton');
-    const errorMessage = document.getElementById('errorMessage');
+    const supabase = supabase.createClient(
+      SUPABASE_URL,
+      SUPABASE_ANON_KEY
+    );
+  </script>
 
-    function showError(message) {
-      errorMessage.textContent = message;
-      errorMessage.classList.add('show');
-    }
+  <!-- Login Logic -->
+  <script>
+    const form = document.getElementById("loginForm");
+    const btn = document.getElementById("loginBtn");
+    const errorBox = document.getElementById("error");
 
-    function hideError() {
-      errorMessage.classList.remove('show');
+    function showError(msg) {
+      errorBox.textContent = msg;
+      errorBox.classList.add("show");
     }
 
     async function checkSession() {
-      const { data: { session } } = await supabase.auth.getSession();
-      if (session) {
-        window.location.href = '/admin.html';
+      const { data } = await supabase.auth.getSession();
+      if (data.session) {
+        window.location.href = "/admin.html";
       }
     }
-
     checkSession();
 
-    loginForm.addEventListener('submit', async (e) => {
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      hideError();
-
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-
-      loginButton.textContent = 'Signing in...';
-      loginButton.disabled = true;
+      errorBox.classList.remove("show");
+      btn.disabled = true;
+      btn.textContent = "Signing in...";
 
       try {
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+
         const { data, error } = await supabase.auth.signInWithPassword({
           email,
           password
@@ -217,13 +187,27 @@
 
         if (error) throw error;
 
-        window.location.href = '/admin.html';
-      } catch (error) {
-        showError(error.message || 'Failed to sign in. Please check your credentials.');
-        loginButton.textContent = 'Sign In';
-        loginButton.disabled = false;
+        // ADMIN CHECK
+        const { data: admin, error: adminError } = await supabase
+          .from("admin_users")
+          .select("*")
+          .eq("id", data.user.id)
+          .single();
+
+        if (adminError || !admin) {
+          await supabase.auth.signOut();
+          throw new Error("You are not authorized as admin.");
+        }
+
+        window.location.href = "/admin.html";
+
+      } catch (err) {
+        showError(err.message || "Login failed");
+        btn.disabled = false;
+        btn.textContent = "Sign In";
       }
     });
   </script>
+
 </body>
 </html>
