--- a/login.html
+++ b/login.html
@@ -2,212 +2,115 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Login – Win Win</title>
 
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top, #1a0a0a, #000);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
+    body{
+      margin:0;
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background:#000;
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+      color:#fff;
     }
-
-    .card {
-      width: 100%;
-      max-width: 420px;
-      background: rgba(255,255,255,0.06);
-      border: 1px solid rgba(255,255,255,0.12);
-      backdrop-filter: blur(14px);
-      border-radius: 18px;
-      padding: 40px;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.6);
+    .card{
+      width:100%;
+      max-width:420px;
+      padding:40px;
+      border-radius:16px;
+      background:rgba(255,255,255,.06);
+      border:1px solid rgba(255,255,255,.15);
+      backdrop-filter:blur(14px);
     }
-
-    h1 {
-      text-align: center;
-      font-size: 32px;
-      margin-bottom: 6px;
+    h1{text-align:center;margin-bottom:8px}
+    h1 span{color:#e11d2e}
+    p{text-align:center;color:#aaa;margin-bottom:30px}
+    label{font-size:14px;color:#ccc}
+    input{
+      width:100%;
+      margin:6px 0 18px;
+      padding:12px;
+      border-radius:8px;
+      border:1px solid rgba(255,255,255,.2);
+      background:rgba(255,255,255,.08);
+      color:#fff;
     }
-
-    h1 span { color: #e11d2e; }
-
-    p.subtitle {
-      text-align: center;
-      font-size: 14px;
-      color: #aaa;
-      margin-bottom: 30px;
+    button{
+      width:100%;
+      padding:14px;
+      border-radius:8px;
+      border:none;
+      background:#e11d2e;
+      color:#fff;
+      font-weight:600;
+      cursor:pointer;
     }
-
-    label {
-      font-size: 14px;
-      color: #ccc;
-      display: block;
-      margin-bottom: 6px;
+    .error{
+      display:none;
+      margin-bottom:16px;
+      padding:12px;
+      border-radius:8px;
+      background:rgba(220,38,38,.15);
+      color:#ff6b6b;
+      font-size:14px;
     }
-
-    input {
-      width: 100%;
-      padding: 12px 14px;
-      border-radius: 8px;
-      border: 1px solid rgba(255,255,255,0.15);
-      background: rgba(255,255,255,0.08);
-      color: #fff;
-      margin-bottom: 18px;
-      font-size: 15px;
-    }
-
-    input:focus {
-      outline: none;
-      border-color: #e11d2e;
-      background: rgba(255,255,255,0.12);
-    }
-
-    button {
-      width: 100%;
-      padding: 14px;
-      background: #e11d2e;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      font-weight: 600;
-      color: #fff;
-      cursor: pointer;
-    }
-
-    button:hover { background: #c11828; }
-
-    button:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-    }
-
-    .error {
-      background: rgba(225,29,46,0.15);
-      border: 1px solid rgba(225,29,46,0.4);
-      padding: 12px;
-      border-radius: 8px;
-      font-size: 14px;
-      margin-bottom: 18px;
-      display: none;
-    }
-
-    .error.show { display: block; }
-
-    .back {
-      margin-top: 24px;
-      text-align: center;
-      font-size: 14px;
-    }
-
-    .back a {
-      color: #aaa;
-      text-decoration: none;
-    }
-
-    .back a:hover { color: #e11d2e; }
   </style>
 </head>
-
 <body>
 
-  <div class="card">
-    <h1>Win Win<span>.</span></h1>
-    <p class="subtitle">Blog Admin Login</p>
+<div class="card">
+  <h1>Win Win<span>.</span></h1>
+  <p>Admin Login</p>
 
-    <div id="error" class="error"></div>
+  <div id="error" class="error"></div>
 
-    <form id="loginForm">
-      <label>Email</label>
-      <input type="email" id="email" required autocomplete="email" />
+  <form id="loginForm">
+    <label>Email</label>
+    <input id="email" type="email" required />
 
-      <label>Password</label>
-      <input type="password" id="password" required autocomplete="current-password" />
+    <label>Password</label>
+    <input id="password" type="password" required />
 
-      <button id="loginBtn" type="submit">Sign In</button>
-    </form>
+    <button>Sign In</button>
+  </form>
+</div>
 
-    <div class="back">
-      <a href="/insights.html">← Back to Blog</a>
-    </div>
-  </div>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="/js/supabaseClient.js"></script>
 
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  const supabase = window.supabase;
+  const errorBox = document.getElementById("error");
 
-  <!-- Supabase Client -->
-  <script>
-    const SUPABASE_URL = "https://nybgvfskctuljqlrsmsq.supabase.co";
-    const SUPABASE_ANON_KEY = "sb_publishable_zbJZxJVPQmkJYK3lK9LrBg_BuJTg1A";
+  async function checkSession(){
+    const { data } = await supabase.auth.getSession();
+    if(data.session){
+      location.href = "/admin.html";
+    }
+  }
+  checkSession();
 
-    const supabase = supabase.createClient(
-      SUPABASE_URL,
-      SUPABASE_ANON_KEY
-    );
-  </script>
+  document.getElementById("loginForm").onsubmit = async (e)=>{
+    e.preventDefault();
+    errorBox.style.display="none";
 
-  <!-- Login Logic -->
-  <script>
-    const form = document.getElementById("loginForm");
-    const btn = document.getElementById("loginBtn");
-    const errorBox = document.getElementById("error");
+    const email = email.value;
+    const password = password.value;
 
-    function showError(msg) {
-      errorBox.textContent = msg;
-      errorBox.classList.add("show");
+    const { error } = await supabase.auth.signInWithPassword({ email, password });
+
+    if(error){
+      errorBox.textContent = error.message;
+      errorBox.style.display="block";
+      return;
     }
 
-    async function checkSession() {
-      const { data } = await supabase.auth.getSession();
-      if (data.session) {
-        window.location.href = "/admin.html";
-      }
-    }
-    checkSession();
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      errorBox.classList.remove("show");
-      btn.disabled = true;
-      btn.textContent = "Signing in...";
-
-      try {
-        const email = document.getElementById("email").value;
-        const password = document.getElementById("password").value;
-
-        const { data, error } = await supabase.auth.signInWithPassword({
-          email,
-          password
-        });
-
-        if (error) throw error;
-
-        // ADMIN CHECK
-        const { data: admin, error: adminError } = await supabase
-          .from("admin_users")
-          .select("*")
-          .eq("id", data.user.id)
-          .single();
-
-        if (adminError || !admin) {
-          await supabase.auth.signOut();
-          throw new Error("You are not authorized as admin.");
-        }
-
-        window.location.href = "/admin.html";
-
-      } catch (err) {
-        showError(err.message || "Login failed");
-        btn.disabled = false;
-        btn.textContent = "Sign In";
-      }
-    });
-  </script>
+    location.href = "/admin.html";
+  };
+</script>
 
 </body>
 </html>
