--- a/admin.html
+++ b/admin.html
@@ -254,20 +254,18 @@ label{display:block;margin-bottom:6px;font-weight:600;font-size:14px;color:#ccc}
       <input type="hidden" id="imageId">
 
       <div class="form-group">
-        <label>Upload Image</label>
+        <label>Upload Image *</label>
         <div class="upload-area" id="uploadArea">
           <input type="file" id="imageFile" accept="image/*" style="display:none" onchange="handleFileSelect(event)">
           <p>Click to upload or drag and drop</p>
           <p style="font-size:12px;color:#999">JPG, PNG, GIF, WebP (max 5MB)</p>
         </div>
+        <div id="currentImagePreview" style="margin-top:12px;display:none">
+          <img id="previewImg" style="max-width:200px;max-height:200px;border-radius:8px" />
+        </div>
       </div>
 
-      <div style="text-align:center;margin:16px 0;color:#999">— OR —</div>
-
-      <div class="form-group">
-        <label>Image URL</label>
-        <input type="url" id="imageUrl" placeholder="https://example.com/image.jpg">
-      </div>
+      <input type="hidden" id="imageUrl">
 
       <div class="form-group">
         <label>Name *</label>
@@ -521,17 +519,31 @@ function openImageModal(){
   document.getElementById("imageLocation").value = "";
   document.getElementById("imageAlt").value = "";
   document.getElementById("imageFile").value = "";
+  document.getElementById("currentImagePreview").style.display = "none";
+  uploadArea.querySelector("p").textContent = "Click to upload or drag and drop";
 }
 
 function editImage(image){
   document.getElementById("imageModalTitle").textContent = "Edit Image";
   document.getElementById("imageModal").classList.add("active");
-  document.getElementById("imageId").value = image.id;
+  const imageIdInput = document.getElementById("imageId");
+  imageIdInput.value = image.id;
+  imageIdInput.dataset.storagePath = image.storage_path || "";
   document.getElementById("imageUrl").value = image.url;
   document.getElementById("imageName").value = image.name;
   document.getElementById("imageCategory").value = image.category;
   document.getElementById("imageLocation").value = image.usage_location || "";
   document.getElementById("imageAlt").value = image.alt_text || "";
+  document.getElementById("imageFile").value = "";
+
+  // Show current image preview
+  if(image.url){
+    const previewContainer = document.getElementById("currentImagePreview");
+    const previewImg = document.getElementById("previewImg");
+    previewImg.src = image.url;
+    previewContainer.style.display = "block";
+    uploadArea.querySelector("p").textContent = "Current image shown below. Upload new file to replace.";
+  }
 }
 
 function closeImageModal(){
@@ -565,6 +577,16 @@ function handleFileSelect(e){
     if(!document.getElementById("imageName").value){
       document.getElementById("imageName").value = file.name.replace(/\.[^/.]+$/, "");
     }
+
+    // Show image preview
+    const reader = new FileReader();
+    reader.onload = function(event){
+      const previewContainer = document.getElementById("currentImagePreview");
+      const previewImg = document.getElementById("previewImg");
+      previewImg.src = event.target.result;
+      previewContainer.style.display = "block";
+    };
+    reader.readAsDataURL(file);
   }
 }
 
@@ -577,7 +599,7 @@ async function saveImage(e){
   let fileName = null;
 
   // Upload file if provided
-  if(file && !id){
+  if(file){
     const fileExt = file.name.split('.').pop();
     fileName = `${Date.now()}-${Math.random().toString(36).substring(7)}.${fileExt}`;
     const { data: uploadData, error: uploadError } = await window.supabase.storage
@@ -594,26 +616,44 @@ async function saveImage(e){
       .getPublicUrl(fileName);
 
     imageUrl = urlData.publicUrl;
+
+    // If editing and had an old storage file, delete it
+    if(id){
+      const oldStoragePath = document.getElementById("imageId").dataset.storagePath;
+      if(oldStoragePath){
+        await window.supabase.storage
+          .from('website-images')
+          .remove([oldStoragePath]);
+      }
+    }
   }
 
-  if(!imageUrl){
-    alert("Please provide an image URL or upload a file");
+  // When editing, keep the existing URL if no new file is uploaded
+  if(!imageUrl && !id){
+    alert("Please upload an image file");
     return;
   }
 
   const data = {
     name: document.getElementById("imageName").value,
-    url: imageUrl,
     category: document.getElementById("imageCategory").value,
     usage_location: document.getElementById("imageLocation").value,
-    alt_text: document.getElementById("imageAlt").value,
-    storage_path: fileName
+    alt_text: document.getElementById("imageAlt").value
   };
+
+  // Only update URL and storage path if a new file was uploaded
+  if(file){
+    data.url = imageUrl;
+    data.storage_path = fileName;
+  }
 
   let result;
   if(id){
     result = await window.supabase.from("website_images").update(data).eq("id", id);
   } else {
+    // For new images, URL and storage_path are required
+    data.url = imageUrl;
+    data.storage_path = fileName;
     result = await window.supabase.from("website_images").insert([data]);
   }
 
