--- a/admin.html
+++ b/admin.html
@@ -285,7 +285,29 @@ label{display:block;margin-bottom:6px;font-weight:600;font-size:14px;color:#ccc}
 
       <div class="form-group">
         <label>Usage Location</label>
-        <input type="text" id="imageLocation" placeholder="e.g., home-hero, about-team">
+        <select id="imageLocation">
+          <option value="">Select a location</option>
+          <optgroup label="Home Page">
+            <option value="home-hero">Home - Hero Background</option>
+            <option value="home-about">Home - About Section Background</option>
+            <option value="home-why-choose">Home - Why Choose Image</option>
+            <option value="home-benefits">Home - Benefits Image</option>
+          </optgroup>
+          <optgroup label="About Page">
+            <option value="about-hero">About - Hero Background</option>
+          </optgroup>
+          <optgroup label="Insights Page">
+            <option value="insights-hero">Insights - Hero Background</option>
+          </optgroup>
+          <optgroup label="Other">
+            <option value="other">Other (Custom)</option>
+          </optgroup>
+        </select>
+      </div>
+
+      <div class="form-group" id="customLocationGroup" style="display: none;">
+        <label>Custom Location</label>
+        <input type="text" id="customLocation" placeholder="e.g., about-team-member">
       </div>
 
       <div class="form-group">
@@ -517,6 +539,8 @@ function openImageModal(){
   document.getElementById("imageName").value = "";
   document.getElementById("imageCategory").value = "general";
   document.getElementById("imageLocation").value = "";
+  document.getElementById("customLocation").value = "";
+  document.getElementById("customLocationGroup").style.display = "none";
   document.getElementById("imageAlt").value = "";
   document.getElementById("imageFile").value = "";
   document.getElementById("currentImagePreview").style.display = "none";
@@ -532,9 +556,25 @@ function editImage(image){
   document.getElementById("imageUrl").value = image.url;
   document.getElementById("imageName").value = image.name;
   document.getElementById("imageCategory").value = image.category;
-  document.getElementById("imageLocation").value = image.usage_location || "";
   document.getElementById("imageAlt").value = image.alt_text || "";
   document.getElementById("imageFile").value = "";
+
+  // Handle usage location - check if it's in the dropdown
+  const locationSelect = document.getElementById("imageLocation");
+  const usageLocation = image.usage_location || "";
+  const validLocations = ['home-hero', 'home-about', 'home-why-choose', 'home-benefits', 'about-hero', 'insights-hero'];
+
+  if (validLocations.includes(usageLocation)) {
+    locationSelect.value = usageLocation;
+    document.getElementById("customLocationGroup").style.display = "none";
+  } else if (usageLocation) {
+    locationSelect.value = "other";
+    document.getElementById("customLocation").value = usageLocation;
+    document.getElementById("customLocationGroup").style.display = "block";
+  } else {
+    locationSelect.value = "";
+    document.getElementById("customLocationGroup").style.display = "none";
+  }
 
   // Show current image preview
   if(image.url){
@@ -647,10 +687,21 @@ async function saveImage(e){
     return;
   }
 
+  // Get usage location - use custom if "other" is selected
+  const selectedLocation = document.getElementById("imageLocation").value;
+  const usageLocation = selectedLocation === 'other'
+    ? document.getElementById("customLocation").value
+    : selectedLocation;
+
+  if (!usageLocation) {
+    alert("Please select a usage location");
+    return;
+  }
+
   const data = {
     name: document.getElementById("imageName").value,
     category: document.getElementById("imageCategory").value,
-    usage_location: document.getElementById("imageLocation").value,
+    usage_location: usageLocation,
     alt_text: document.getElementById("imageAlt").value
   };
 
@@ -747,6 +798,16 @@ async function deleteImage(id, name){
 
   loadImages();
 }
+
+// Handle image location dropdown change
+document.getElementById("imageLocation").addEventListener("change", (e) => {
+  const customLocationGroup = document.getElementById("customLocationGroup");
+  if (e.target.value === "other") {
+    customLocationGroup.style.display = "block";
+  } else {
+    customLocationGroup.style.display = "none";
+  }
+});
 
 // Auto-generate slug from title
 document.getElementById("blogTitle").addEventListener("input", (e) => {
