--- a/admin.html
+++ b/admin.html
@@ -158,7 +158,7 @@ label{display:block;margin-bottom:6px;font-weight:600;font-size:14px;color:#ccc}
   <div id="blogs-tab" class="tab-content">
     <div class="card">
       <div class="flex flex-end">
-        <button class="btn" onclick="openBlogModal()">+ Create New Article</button>
+        <button class="btn" onclick="createNewBlog()">+ Create New Article</button>
       </div>
     </div>
 
@@ -185,73 +185,6 @@ label{display:block;margin-bottom:6px;font-weight:600;font-size:14px;color:#ccc}
     </div>
 
     <div id="imageGallery" class="loading">Loading images...</div>
-  </div>
-</div>
-
-<!-- BLOG MODAL -->
-<div id="blogModal" class="modal">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h3 id="blogModalTitle">Create Article</h3>
-      <button class="close-btn" onclick="closeBlogModal()">×</button>
-    </div>
-    <form onsubmit="saveBlog(event)">
-      <input type="hidden" id="blogId">
-
-      <div class="form-group">
-        <label>Title *</label>
-        <input type="text" id="blogTitle" required>
-      </div>
-
-      <div class="form-group">
-        <label>Slug *</label>
-        <input type="text" id="blogSlug" required>
-      </div>
-
-      <div class="form-group">
-        <label>Excerpt</label>
-        <textarea id="blogExcerpt" rows="3"></textarea>
-      </div>
-
-      <div class="form-group">
-        <label>Content *</label>
-        <textarea id="blogContent" rows="12" required></textarea>
-      </div>
-
-      <div class="form-group">
-        <label>Featured Image URL</label>
-        <input type="url" id="blogImage">
-      </div>
-
-      <div class="form-group">
-        <label>Category</label>
-        <select id="blogCategory">
-          <option value="">Loading...</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <label>Author</label>
-        <input type="text" id="blogAuthor" value="Win Win Team">
-      </div>
-
-      <div class="form-group">
-        <label>Read Time (minutes)</label>
-        <input type="number" id="blogReadTime" value="5" min="1">
-      </div>
-
-      <div class="form-group">
-        <label>
-          <input type="checkbox" id="blogFeatured" style="width:auto;margin-right:8px">
-          Mark as Featured
-        </label>
-      </div>
-
-      <div class="flex flex-end">
-        <button type="button" class="btn-secondary" onclick="closeBlogModal()">Cancel</button>
-        <button type="submit" class="btn">Save Article</button>
-      </div>
-    </form>
   </div>
 </div>
 
@@ -589,91 +522,37 @@ async function loadBlogs(){
     return;
   }
 
-  list.innerHTML = data.map(a => `
-    <div class="article-item">
-      <img src="${a.featured_image_url || 'https://via.placeholder.com/120x80'}" alt="${a.title}">
-      <div class="article-content">
-        <h4>${a.title} ${a.is_featured ? '<span class="badge">FEATURED</span>' : ''}</h4>
-        <p>${a.excerpt || a.content.substring(0, 100)}...</p>
-        <p style="margin-top:8px"><small>By ${a.author} • ${a.read_time} min read • ${a.article_categories?.name || 'Uncategorized'}</small></p>
+  list.innerHTML = '<div class="grid grid-2">' + data.map(a => `
+    <div class="card" style="cursor:pointer;transition:transform .2s,box-shadow .2s"
+         onclick="window.location.href='blog-editor.html?id=${a.id}'"
+         onmouseover="this.style.transform='translateY(-4px)';this.style.boxShadow='0 8px 24px rgba(225,29,46,0.3)'"
+         onmouseout="this.style.transform='translateY(0)';this.style.boxShadow='none'">
+      <img src="${a.featured_image_url || 'https://via.placeholder.com/400x250'}"
+           alt="${a.title}"
+           style="width:100%;height:200px;object-fit:cover;border-radius:8px;margin-bottom:16px">
+      <h3 style="margin:0 0 8px 0;font-size:18px">
+        ${a.title}
+        ${a.is_featured ? '<span class="badge" style="margin-left:8px">FEATURED</span>' : ''}
+      </h3>
+      <p style="margin:0 0 12px 0;color:#999;font-size:14px">${a.excerpt || a.content.substring(0, 120)}...</p>
+      <div style="display:flex;justify-content:space-between;align-items:center;font-size:12px;color:#666">
+        <span>${a.article_categories?.name || 'Uncategorized'}</span>
+        <span>${a.author} • ${a.read_time} min</span>
       </div>
-      <div class="article-actions">
-        <button class="btn-secondary btn-sm" onclick='editBlog(${JSON.stringify(a)})'>Edit</button>
-        <button class="btn-danger btn-sm" onclick="deleteBlog('${a.id}', '${a.title}')">Delete</button>
+      <div style="margin-top:12px;display:flex;gap:8px">
+        <button class="btn-secondary btn-sm" onclick="event.stopPropagation();window.location.href='blog-editor.html?id=${a.id}'" style="flex:1">Edit</button>
+        <button class="btn-danger btn-sm" onclick="event.stopPropagation();deleteBlog('${a.id}', '${a.title}')" style="flex:1">Delete</button>
       </div>
     </div>
-  `).join("");
+  `).join("") + '</div>';
 }
 
-function openBlogModal(){
-  document.getElementById("blogModalTitle").textContent = "Create Article";
-  document.getElementById("blogModal").classList.add("active");
-  document.getElementById("blogId").value = "";
-  document.getElementById("blogTitle").value = "";
-  document.getElementById("blogSlug").value = "";
-  document.getElementById("blogExcerpt").value = "";
-  document.getElementById("blogContent").value = "";
-  document.getElementById("blogImage").value = "";
-  document.getElementById("blogCategory").value = categories[0]?.id || "";
-  document.getElementById("blogAuthor").value = "Win Win Team";
-  document.getElementById("blogReadTime").value = "5";
-  document.getElementById("blogFeatured").checked = false;
-}
-
-function editBlog(article){
-  document.getElementById("blogModalTitle").textContent = "Edit Article";
-  document.getElementById("blogModal").classList.add("active");
-  document.getElementById("blogId").value = article.id;
-  document.getElementById("blogTitle").value = article.title;
-  document.getElementById("blogSlug").value = article.slug;
-  document.getElementById("blogExcerpt").value = article.excerpt || "";
-  document.getElementById("blogContent").value = article.content;
-  document.getElementById("blogImage").value = article.featured_image_url || "";
-  document.getElementById("blogCategory").value = article.category_id || "";
-  document.getElementById("blogAuthor").value = article.author;
-  document.getElementById("blogReadTime").value = article.read_time;
-  document.getElementById("blogFeatured").checked = article.is_featured;
-}
-
-function closeBlogModal(){
-  document.getElementById("blogModal").classList.remove("active");
-}
-
-async function saveBlog(e){
-  e.preventDefault();
-
-  const id = document.getElementById("blogId").value;
-  const data = {
-    title: document.getElementById("blogTitle").value,
-    slug: document.getElementById("blogSlug").value,
-    excerpt: document.getElementById("blogExcerpt").value,
-    content: document.getElementById("blogContent").value,
-    featured_image_url: document.getElementById("blogImage").value,
-    category_id: document.getElementById("blogCategory").value || null,
-    author: document.getElementById("blogAuthor").value,
-    read_time: parseInt(document.getElementById("blogReadTime").value),
-    is_featured: document.getElementById("blogFeatured").checked,
-    published_at: new Date().toISOString()
-  };
-
-  let result;
-  if(id){
-    result = await window.supabase.from("articles").update(data).eq("id", id);
-  } else {
-    result = await window.supabase.from("articles").insert([data]);
-  }
-
-  if(result.error){
-    alert("Error saving article: " + result.error.message);
-    return;
-  }
-
-  closeBlogModal();
-  loadBlogs();
+function createNewBlog(){
+  window.location.href = 'blog-editor.html';
 }
 
 async function deleteBlog(id, title){
-  if(!confirm(`Delete article "${title}"?`)) return;
+  if(!confirm(`Delete article "${title}"?\n\nThis action cannot be undone.`)) return;
 
   const { error } = await window.supabase.from("articles").delete().eq("id", id);
 
@@ -1014,17 +893,6 @@ document.getElementById("imageLocation").addEventListener("change", (e) => {
     customLocationGroup.style.display = "block";
   } else {
     customLocationGroup.style.display = "none";
-  }
-});
-
-// Auto-generate slug from title
-document.getElementById("blogTitle").addEventListener("input", (e) => {
-  if(!document.getElementById("blogId").value){
-    const slug = e.target.value
-      .toLowerCase()
-      .replace(/[^a-z0-9]+/g, '-')
-      .replace(/^-|-$/g, '');
-    document.getElementById("blogSlug").value = slug;
   }
 });
 </script>
